<resources>
    <string name="app_name">CoronaInfoApp</string>
    <string name="mainGesundentelefon">Gesundheitsnummer</string>
    <string name="main">Hauptseite</string>
    <string name="mainZahlen">aktuelle Zahlen</string>
    <string name="mainBeschraenkungen">aktuelle Beschränkungen</string>
    <string name="mainAmpelfarben">Erklärung der Ampelfarben</string>
    <string name="mainIC">Hauptseite</string>
    <string name="mainZahlenIC">Epikurve</string>
    <string name="mainBeschraenkungenIC">Beschränkungen</string>
    <string name="mainAmpelfarbenIC">Ampelfarben</string>
    <string name="beschraenkungen">Beschränkungen:</string>
    <string name="action_favorite">action</string>
    <string name="langTag">tr</string>
    <string name="tage">Angezeigte Tage:</string>
    <string name="anzeigen">Anzeigen</string>
    <string name="Datum">Datum</string>
    <string name="neueFaelle">neue Fälle</string>
    <string name="Faellegesamt">Fälle gesamt</string>
    <string name="noConnection">Konnte keine Verbindung mit dem Server herstellen. Bitte überprüfen Sie ihre Internetverbindung</string>
    <string name="beschraenkungenText">30.12: \n✱ Kultur: Museen, Bibliotheken, Büchereien und Archive werden geschlossen. \n✱ Freizeit: Tierparks, Zoos und botanische Gärten bleiben geschlossen. ></string>
    <string-array name="spinner_numbers">
        <item>30</item>
        <item>50</item>
        <item>90</item>
        <item>120</item>
        <item>365</item>
        <item>alle</item>
    </string-array>
</resources>